--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       rel="stylesheet"
     />
     <title>Choco Valley | Premium Chocolates</title>
-    <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
-    <!-- <link rel="stylesheet" href="/css/home.css" /> -->
-    <link rel="stylesheet" href="/css/prac.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/home.css" />
+
   </head>
   <body>
     <div class="container">
@@ -26,7 +26,7 @@
         </div>
         <div class="navbar-middle">
           <div class="logo-img">
-            <img src="/assets/images/logo.png" alt="" />
+            <img src="assets/images/logo.png" alt="" />
           </div>
         </div>
         <div class="navbar-right">
@@ -61,7 +61,7 @@
       <!-- Hero Section -->
       <section class="hero-section">
         <div class="background-image">
-          <img src="/assets/images/Home/hero-banner.png" alt="Hero Banner" />
+          <img src="assets/images/Home/hero-banner.png" alt="Hero Banner" />
         </div>
         <div class="hero-text">
           <h1>
@@ -76,7 +76,7 @@
       <!-- Discount Section -->
       <section class="discount-section">
         <img
-          src="/assets/images/Home/offerbanner 1.png"
+          src="assets/images/Home/offerbanner 1.png"
           alt="images"
           class="coffee_img"
         />
@@ -167,22 +167,22 @@
           <div class="top-seller-swiper swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/assets/images/Home/img02.png" alt="" />
+                <img src="assets/images/Home/img02.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="/assets/images/Home/img01.png" alt="" />
+                <img src="assets/images/Home/img01.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="/assets/images/Home/img02.png" alt="" />
+                <img src="assets/images/Home/img02.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="/assets/images/Home/img01.png" alt="" />
+                <img src="assets/images/Home/img01.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="/assets/images/Home/img02.png" alt="" />
+                <img src="assets/images/Home/img02.png" alt="" />
               </div>
               <div class="swiper-slide">
-                <img src="/assets/images/Home/img01.png" alt="" />
+                <img src="assets/images/Home/img01.png" alt="" />
               </div>
             </div>
           </div>
@@ -195,7 +195,7 @@
         <div class="flex-container">
           <div class="section-left">
             <img
-              src="/assets/images/Home/IMG-20240812-WA0499[1] 1.png"
+              src="assets/images/Home/IMG-20240812-WA0499[1] 1.png"
               alt=""
             />
           </div>
@@ -236,7 +236,7 @@
       <!-- Subscribe Section -->
       <section class="subscibe-section" id="subscribe-section">
         <img
-          src="/assets/images/Home/chocolate-cookies-pralines-holiday-event-260nw-1236257317 2.png"
+          src="assets/images/Home/chocolate-cookies-pralines-holiday-event-260nw-1236257317 2.png"
           alt="Hero Banner"
         />
         <div class="subscribe-text">
@@ -265,7 +265,7 @@
             <div class="cust-wrap swiper-slide">
               <div class="cust-image">
                 <img
-                  src="/assets/images/Home/gokul bakery logo.jpeg"
+                  src="assets/images/Home/gokul bakery logo.jpeg"
                   alt="Gokul bakery logo"
                 />
               </div>
@@ -279,7 +279,7 @@
             </div>
             <div class="cust-wrap swiper-slide">
               <div class="cust-image">
-                <img src="/assets/images/Home/shrut caters.jpg" alt="" />
+                <img src="assets/images/Home/shrut caters.jpg" alt="" />
               </div>
               <div class="cust-name">Shrut Catters</div>
               <div class="cust-testimonial">
@@ -291,7 +291,7 @@
             </div>
             <div class="cust-wrap swiper-slide">
               <div class="cust-image">
-                <img src="/assets/images/Home/LEJAAH STICKER.svg" alt="" />
+                <img src="assets/images/Home/LEJAAH STICKER.svg" alt="" />
               </div>
               <div class="cust-name">Lejaah (Jain Bakery)</div>
               <div class="cust-testimonial">
@@ -303,7 +303,7 @@
             </div>
             <div class="cust-wrap swiper-slide">
               <div class="cust-image">
-                <img src="/assets/images/Home/swad sargam logo.svg" alt="" />
+                <img src="assets/images/Home/swad sargam logo.svg" alt="" />
               </div>
               <div class="cust-name">Swad Sangam</div>
               <div class="cust-testimonial">
@@ -322,7 +322,7 @@
     <footer>
       <div class="footer-container">
         <div class="logo">
-          <img src="/assets/images/logo.png" alt="Logo" />
+          <img src="assets/images/logo.png" alt="Logo" />
         </div>
 
         <div class="multiple-links">
@@ -396,6 +396,6 @@
       COPYRIGHT © 2024 CHOCOVALLIE CHOCOLATE - ALL RIGHTS RESERVED
     </div>
   </body>
-  <script src="/js/swiper-bundle.min.js"></script>
-  <script src="/js/home.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
+  <script src="js/home.js"></script>
 </html>
