--- a/redirect/index.html
+++ b/redirect/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHOCOVALLIE | REDIRECT</title>
-    <link rel="stylesheet" href="/css/redirect.css" />
+    <link rel="stylesheet" href="../css/redirect.css" />
   </head>
   <body>
     <nav>
-      <img src="/assets/images/logo.png" alt="Logo" />
+      <img src="../assets/images/logo.png" alt="Logo" />
     </nav>
 
     <div class="container">
