--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="assets/logo1.png">
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -69,7 +70,7 @@
             Custom-Made Chocolates
           </h1>
           <p>Crafted with passion, personalized for every occasion.</p>
-          <button><a href="#products">Explore Our Collection</a></button>
+          <button><a href="redirect/index.html">Explore Our Collection</a></button>
         </div>
       </section>
 
@@ -117,7 +118,7 @@
           </p>
           <div class="learn-more">
             <button>
-              <a href="#more-about-us">
+              <a href="redirect/index.html">
                 Learn More
                 <i class="ri-arrow-right-line"></i>
               </a>
@@ -156,7 +157,7 @@
           </p>
           <div class="mts">
             <button>
-              <a href="#">
+              <a href="redirect/index.html">
                 View more about Top Sellers
                 <i class="ri-arrow-right-line"></i>
               </a>
@@ -228,7 +229,7 @@
               years to come. Join us in celebrating your special moments with
               custom-made chocolates that reflect your style and taste.
             </p>
-            <button><a href="#products">Contact Us</a></button>
+            <button><a href="mailto:chocovallie.in@gmail.com">Contact Us</a></button>
           </div>
         </div>
       </section>
