--- a/redirect/index.html
+++ b/redirect/index.html
@@ -16,7 +16,7 @@
       <p>We are currently working on this page. Please check back later!</p>
       <p>
         You can return to the
-        <a href="jpratham.github.io/chocovallie/">homepage</a>
+        <a href="https://jpratham243.github.io/chocovallie">homepage</a>
       </p>
     </div>
   </body>
